--- a/OpenAlbum/project.properties
+++ b/OpenAlbum/project.properties
@@ -7,5 +7,8 @@
 # "ant.properties", and override values to adapt the script to your
 # project structure.
 
+
+# Indicates whether an apk should be generated for each density.
+split.density=false
 # Project target.
-target=android-8
+target=Google Inc.:Google APIs:9
