--- a/OpenAlbum/AndroidManifest.xml
+++ b/OpenAlbum/AndroidManifest.xml
@@ -2,8 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       android:versionCode="20" android:versionName="0.7.3" package="org.mixare" android:installLocation="auto">
 
-    <uses-sdk android:minSdkVersion="3" android:targetSdkVersion="9"/>
-
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.CAMERA" />
@@ -66,6 +64,7 @@
 </application>
 
 <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
-
-<supports-screens android:anyDensity="true" android:smallScreens="true" android:normalScreens="true" android:largeScreens="true" android:xlargeScreens="true"></supports-screens>
+ <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="9"/>
+ <!-- <supports-screens android:anyDensity="true" android:smallScreens="true" android:normalScreens="true" android:largeScreens="true" android:xlargeScreens="true"></supports-screens> -->
+<supports-screens android:anyDensity="true" android:smallScreens="true" android:normalScreens="true" android:largeScreens="true"></supports-screens>
 </manifest> 
