--- a/OpenAlbum/project.properties
+++ b/OpenAlbum/project.properties
@@ -9,6 +9,6 @@
 
 
 # Indicates whether an apk should be generated for each density.
-split.density=false
+#split.density=false
 # Project target.
 target=Google Inc.:Google APIs:9
