--- a/OpenAlbum/AndroidManifest.xml
+++ b/OpenAlbum/AndroidManifest.xml
@@ -39,7 +39,7 @@
                		android:value=".MixView" />
         </activity>
         
-		<activity android:name="MixListView" 
+		<activity android:name=".MixListView" 
 			android:screenOrientation="user" 
 			android:launchMode="singleTop">
 			<intent-filter>
@@ -49,7 +49,7 @@
                    	android:resource="@xml/searchable"/>
 		</activity>
 
-		<activity android:name="MixMap" 
+		<activity android:name=".MixMap" 
 			android:screenOrientation="user" 
 			android:launchMode="singleTop">
 			<intent-filter>
@@ -61,10 +61,12 @@
 		 <activity android:name=".data.DataSource" />
 		 <activity android:name=".data.DataSourceList" />
 		 
+		 
+		 <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
+ 
 </application>
+<uses-sdk android:minSdkVersion="9" android:targetSdkVersion="9"/>
 
-<uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
- <uses-sdk android:minSdkVersion="9" android:targetSdkVersion="9"/>
  <!-- <supports-screens android:anyDensity="true" android:smallScreens="true" android:normalScreens="true" android:largeScreens="true" android:xlargeScreens="true"></supports-screens> -->
 <supports-screens android:anyDensity="true" android:smallScreens="true" android:normalScreens="true" android:largeScreens="true"></supports-screens>
 </manifest> 
