--- a/OpenAlbum/AndroidManifest.xml
+++ b/OpenAlbum/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      android:versionCode="20" android:versionName="0.7.3" package="org.mixare" android:installLocation="auto">
+      android:versionCode="20" android:debuggable="true" android:versionName="0.7.3" package="org.mixare" android:installLocation="auto">
 
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.INTERNET" />
@@ -63,9 +63,9 @@
 		 
 		 
 		 <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
- 
+ 		<uses-library android:name="com.google.android.maps" />
 </application>
-<uses-sdk android:minSdkVersion="9" android:targetSdkVersion="9"/>
+<uses-sdk android:minSdkVersion="8" android:targetSdkVersion="8"/>
 
  <!-- <supports-screens android:anyDensity="true" android:smallScreens="true" android:normalScreens="true" android:largeScreens="true" android:xlargeScreens="true"></supports-screens> -->
 <supports-screens android:anyDensity="true" android:smallScreens="true" android:normalScreens="true" android:largeScreens="true"></supports-screens>
