--- a/OpenAlbum/AndroidManifest.xml
+++ b/OpenAlbum/AndroidManifest.xml
@@ -8,6 +8,7 @@
 	<uses-feature android:required="false" android:name="android.hardware.camera.autofocus"></uses-feature>
 	<uses-feature android:required="false" android:name="android.hardware.camera.flash"></uses-feature>
 	<uses-feature android:required="false" android:name="android.hardware.camera.front"></uses-feature>
+	<uses-permission android:name="android.permission.WAKE_LOCK"/>
 	
     <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
     	<uses-library android:name="com.google.android.maps" />
@@ -61,8 +62,6 @@
 		 <activity android:name=".data.DataSource" />
 		 <activity android:name=".data.DataSourceList" />
 		 
-		 
-		 <uses-permission android:name="android.permission.WAKE_LOCK"></uses-permission>
  		<uses-library android:name="com.google.android.maps" />
 </application>
 <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="8"/>
