--- a/OpenAlbum/AndroidManifest.xml
+++ b/OpenAlbum/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      android:versionCode="20" android:debuggable="true" android:versionName="0.7.3" package="org.mixare" android:installLocation="auto">
+      android:versionCode="20" android:debuggable="true" android:versionName="0.7.3.1" package="org.mixare" android:installLocation="auto">
 
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="8"/>
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.CAMERA" />
@@ -9,8 +10,9 @@
 	<uses-feature android:required="false" android:name="android.hardware.camera.flash"></uses-feature>
 	<uses-feature android:required="false" android:name="android.hardware.camera.front"></uses-feature>
 	<uses-permission android:name="android.permission.WAKE_LOCK"/>
+	<supports-screens android:anyDensity="true" android:smallScreens="true" android:normalScreens="true" android:largeScreens="true"/>
 	
-    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher">
+    <application android:label="@string/app_name" android:icon="@drawable/ic_launcher" android:debuggable="true">
     	<uses-library android:name="com.google.android.maps" />
         
         <activity android:label="@string/app_name" android:name=".MixView" 
@@ -64,8 +66,7 @@
 		 
  		<uses-library android:name="com.google.android.maps" />
 </application>
-<uses-sdk android:minSdkVersion="8" android:targetSdkVersion="8"/>
+
 
  <!-- <supports-screens android:anyDensity="true" android:smallScreens="true" android:normalScreens="true" android:largeScreens="true" android:xlargeScreens="true"></supports-screens> -->
-<supports-screens android:anyDensity="true" android:smallScreens="true" android:normalScreens="true" android:largeScreens="true"></supports-screens>
 </manifest> 
