--- a/OpenAlbum/AndroidManifest.xml
+++ b/OpenAlbum/AndroidManifest.xml
@@ -2,8 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       android:versionCode="20" android:debuggable="true" android:versionName="0.7.4.1" package="org.mixare" android:installLocation="auto">
 
-    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="8"/>
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="9"/>
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 	<uses-permission android:name="android.permission.INTERNET" />
 	<uses-permission android:name="android.permission.CAMERA" />
 	<uses-feature android:required="false" android:name="android.hardware.camera.autofocus"></uses-feature>
