--- a/OpenAlbum/AndroidManifest.xml
+++ b/OpenAlbum/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      android:versionCode="20" android:debuggable="true" android:versionName="0.7.4.22" package="org.mixare" android:installLocation="auto">
+      android:versionCode="20" android:debuggable="true" android:versionName="0.7.4.24" package="org.mixare" android:installLocation="auto">
 
-    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="9" android:maxSdkVersion="10"/>
+    <uses-sdk android:minSdkVersion="8" android:targetSdkVersion="10"/>
 	<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
 	<uses-permission android:name="android.permission.INTERNET" />
